sflog/test/corpus/limits.txt
==================
Cumulative Limit Usage Default Namespace
==================
14:32:01.075 (75000000)|CUMULATIVE_LIMIT_USAGE
14:32:01.075 (75100000)|LIMIT_USAGE_FOR_NS|(default)|
  Number of SOQL queries: 1 out of 100
  Number of query rows: 10 out of 50000
  Number of SOSL queries: 0 out of 20
  Number of DML statements: 0 out of 150
  Number of DML rows: 0 out of 10000
  Maximum CPU time: 25 out of 10000
  Maximum heap size: 1045 out of 6000000
  Number of callouts: 0 out of 100
  Number of Email Invocations: 0 out of 10
  Number of future calls: 0 out of 50
  Number of queueable jobs added to the queue: 0 out of 50
  Number of Mobile Apex push calls: 0 out of 10
14:32:01.080 (80000000)|CUMULATIVE_LIMIT_USAGE_END
---
(source_file
  (limit_usage_section
    start: (limit_usage_start_line
      timestamp: (timestamp)
      nanoseconds: (nanoseconds))
    (limit_usage_for_ns_block
      header: (limit_usage_ns_header_line
        timestamp: (timestamp)
        nanoseconds: (nanoseconds)
        namespace: (default_namespace))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number)))
    end: (limit_usage_end_line
      timestamp: (timestamp)
      nanoseconds: (nanoseconds))))

==================
Full Transaction with Limit Table and Custom Namespace
==================
67.0 APEX_CODE,FINEST;DB,INFO
14:32:01.042 (42105102)|USER_INFO|[EXTERNAL]|0055e000000xxxx|user@example.com|(GMT-07:00) Pacific Daylight Time (America/Los_Angeles)|GMT-07:00
14:32:01.043 (43100200)|EXECUTION_STARTED
14:32:01.043 (43201500)|CODE_UNIT_STARTED|[EXTERNAL]|01q5e000000xxxx|AccountTrigger on Account trigger event BeforeInsert
14:32:01.050 (50123000)|METHOD_ENTRY|[3]|01p5e000000yyyy|AccountService.validate()
14:32:01.052 (52301000)|USER_DEBUG|[5]|DEBUG|Processing 10 accounts
14:32:01.055 (55400000)|SOQL_EXECUTE_BEGIN|[12]|Aggregations:0|SELECT Id, Name FROM Account WHERE Id IN :tmpVar1
14:32:01.060 (60100000)|SOQL_EXECUTE_END|[12]|Rows:10
14:32:01.065 (65200000)|METHOD_EXIT|[3]|AccountService.validate()
14:32:01.070 (70000000)|CODE_UNIT_FINISHED|AccountTrigger on Account trigger event BeforeInsert
14:32:01.075 (75000000)|CUMULATIVE_LIMIT_USAGE
14:32:01.075 (75100000)|LIMIT_USAGE_FOR_NS|(default)|
  Number of SOQL queries: 1 out of 100
  Number of query rows: 10 out of 50000
  Number of DML statements: 0 out of 150
14:32:01.076 (75200000)|LIMIT_USAGE_FOR_NS|cimb|
  Number of SOQL queries: 0 out of 100
14:32:01.080 (80000000)|CUMULATIVE_LIMIT_USAGE_END
14:32:01.082 (82000000)|EXECUTION_FINISHED
---
(source_file
  (log_header
    version: (api_version)
    (category_filter
      category: (category_identifier)
      level: (log_level))
    (category_filter
      category: (category_identifier)
      level: (log_level)))
  (event_line
    timestamp: (timestamp)
    nanoseconds: (nanoseconds)
    (user_info_event
      frame: (frame_identifier)
      user_id: (id_or_type)
      username: (username)
      timezone: (timezone)
      gmt_offset: (gmt_offset)))
  (event_line
    timestamp: (timestamp)
    nanoseconds: (nanoseconds)
    (generic_event
      event_type: (event_identifier)))
  (event_line
    timestamp: (timestamp)
    nanoseconds: (nanoseconds)
    (code_unit_started_event
      frame: (frame_identifier)
      id: (id_or_type)
      description: (code_unit_description)))
  (event_line
    timestamp: (timestamp)
    nanoseconds: (nanoseconds)
    (method_entry_event
      line: (line_reference)
      id: (id_or_type)
      signature: (method_signature)))
  (event_line
    timestamp: (timestamp)
    nanoseconds: (nanoseconds)
    (user_debug_event
      line: (line_reference)
      level: (log_level)
      message: (debug_message)))
  (event_line
    timestamp: (timestamp)
    nanoseconds: (nanoseconds)
    (soql_begin_event
      line: (line_reference)
      aggregations: (aggregations)
      query: (soql_query)))
  (event_line
    timestamp: (timestamp)
    nanoseconds: (nanoseconds)
    (soql_end_event
      line: (line_reference)
      rows: (rows_count)))
  (event_line
    timestamp: (timestamp)
    nanoseconds: (nanoseconds)
    (method_exit_event
      line: (line_reference)
      signature: (method_signature)))
  (event_line
    timestamp: (timestamp)
    nanoseconds: (nanoseconds)
    (code_unit_finished_event
      description: (code_unit_description)))
  (limit_usage_section
    start: (limit_usage_start_line
      timestamp: (timestamp)
      nanoseconds: (nanoseconds))
    (limit_usage_for_ns_block
      header: (limit_usage_ns_header_line
        timestamp: (timestamp)
        nanoseconds: (nanoseconds)
        namespace: (default_namespace))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number)))
    (limit_usage_for_ns_block
      header: (limit_usage_ns_header_line
        timestamp: (timestamp)
        nanoseconds: (nanoseconds)
        namespace: (identifier))
      (limit_metric_line
        name: (limit_name)
        used: (number)
        max: (number)))
    end: (limit_usage_end_line
      timestamp: (timestamp)
      nanoseconds: (nanoseconds)))
  (event_line
    timestamp: (timestamp)
    nanoseconds: (nanoseconds)
    (generic_event
      event_type: (event_identifier))))
